test for add_variable correctly returns empty value

--- a/templateApp/templateAppTest/templateAppTest.csproj
+++ b/templateApp/templateAppTest/templateAppTest.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\templateClass\templateClass.csproj">
+      <Project>{bb1bb84f-5fbd-47c5-91ce-df2b33be82d9}</Project>
+      <Name>templateClass</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
